[gd_scene load_steps=3 format=3 uid="uid://bw18c0n57lnex"]

[ext_resource type="Script" uid="uid://g55vhpa756ba" path="res://main.gd" id="1_0xm2m"]
[ext_resource type="PackedScene" uid="uid://p2e7uacdqrjd" path="res://space.tscn" id="1_ig7tw"]

[node name="Main" type="Node"]
script = ExtResource("1_0xm2m")

[node name="Space1" parent="." instance=ExtResource("1_ig7tw")]
offset_right = 150.0
offset_bottom = 150.0

[node name="Space2" parent="." instance=ExtResource("1_ig7tw")]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -75.0
offset_right = 75.0
offset_bottom = 150.0
grow_horizontal = 2
col = 1

[node name="Space3" parent="." instance=ExtResource("1_ig7tw")]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -150.0
offset_right = 0.0
offset_bottom = 150.0
grow_horizontal = 0
col = 2

[node name="Space4" parent="." instance=ExtResource("1_ig7tw")]
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -225.0
offset_right = 150.0
offset_bottom = -75.0
grow_vertical = 2
row = 1

[node name="Space5" parent="." instance=ExtResource("1_ig7tw")]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -75.0
offset_top = -225.0
offset_right = 75.0
offset_bottom = -75.0
grow_horizontal = 2
grow_vertical = 2
row = 1
col = 1

[node name="Space6" parent="." instance=ExtResource("1_ig7tw")]
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -225.0
offset_right = 0.0
offset_bottom = -75.0
grow_horizontal = 0
grow_vertical = 2
row = 1
col = 2

[node name="Space7" parent="." instance=ExtResource("1_ig7tw")]
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -450.0
offset_right = 150.0
offset_bottom = -300.0
grow_vertical = 0
row = 2

[node name="Space8" parent="." instance=ExtResource("1_ig7tw")]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -75.0
offset_top = -450.0
offset_right = 75.0
offset_bottom = -300.0
grow_horizontal = 2
grow_vertical = 0
row = 2
col = 1

[node name="Space9" parent="." instance=ExtResource("1_ig7tw")]
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -150.0
offset_top = -450.0
offset_right = 0.0
offset_bottom = -300.0
grow_horizontal = 0
grow_vertical = 0
row = 2
col = 2

[node name="Node2D" type="Node2D" parent="."]

[node name="Label" type="Label" parent="."]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -249.0
offset_top = -111.0
offset_right = -149.0
offset_bottom = -87.9999
grow_horizontal = 2
grow_vertical = 0
scale = Vector2(5, 5)
size_flags_horizontal = 0
text = "O's turn"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="pressed" from="Space1" to="." method="_on_space_pressed"]
[connection signal="pressed" from="Space2" to="." method="_on_space_2_pressed"]
[connection signal="pressed" from="Space3" to="." method="_on_space_3_pressed"]
[connection signal="pressed" from="Space4" to="." method="_on_space_4_pressed"]
[connection signal="pressed" from="Space5" to="." method="_on_space_5_pressed"]
[connection signal="pressed" from="Space6" to="." method="_on_space_6_pressed"]
[connection signal="pressed" from="Space7" to="." method="_on_space_7_pressed"]
[connection signal="pressed" from="Space8" to="." method="_on_space_8_pressed"]
[connection signal="pressed" from="Space9" to="." method="_on_space_9_pressed"]
